# TWM

./: .gitmodules  blah.ipynb  lab2.py  pyproject.toml
lab2/: blah.ipynb  lab2.ipynb  pyproject.toml
lab3/: .gitingore  classifybowstud.m  classifysvm.m  classifysvm_bayesopt.m  classifysvm_new.m  classifysvm_stud.m  costfun1.m  crossval.m  crossvalearly.m  hfun1.m  roz.docx  trainsimple.m
lab4/: lab4.ipynb  model.py  requirements.txt
lab5/: IMPORTANT_NOTE.md  hog.mlx  hog_4.m  hog_copy.m
lab7/: Copy_of_optflow_test.m  foreground.m  optflow.m  optflow2.m  optflow_test.m
project/: .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  justfile  predict_deeplab.py  pyproject.toml  train_deeplab.py  train_test_deeplab.py  wrapper.sh
project/design_proposal/: design_proposal.md
project/eval/: twm_0_005.csv  twm_0_01.csv  twm_0_02.csv  twm_cityscapes_original.csv
project/notebooks/: images.ipynb  messing_around.ipynb
